# drift

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
crates/drift-cli/src/: main.rs  play.rs
crates/drift-client/src/: app.rs  main.rs  net.rs
crates/drift-combat/src/: encounter.rs  lib.rs
crates/drift-core/src/: hook.rs  rng.rs
crates/drift-data/src/: lib.rs  scenario.rs  ship.rs
crates/drift-economy/: Cargo.toml
crates/drift-economy/src/: command.rs  contract.rs  event.rs  finance.rs  lib.rs  patrol.rs  pricing.rs  production.rs  world.rs
crates/drift-economy/tests/: integration.rs
crates/drift-flight/: Cargo.toml
crates/drift-flight/src/: combat.rs  flight.rs  lib.rs  main.rs  nav.rs  scene.rs  targeting.rs  weapons.rs
crates/drift-mods/src/: error.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/drift-mods/tests/: loader.rs
crates/drift-proto/src/: lib.rs
crates/drift-script/: Cargo.toml
crates/drift-script/src/: lib.rs
crates/drift-server/src/: server.rs
crates/drift-server/tests/: round_trip.rs
crates/drift-sim/: Cargo.toml
crates/drift-sim/src/: lib.rs
docs/dev/: flight-combat.md  multiplayer.md  roadmap.md
mods/core/ships/: ships.ron
scenarios/: equilibrium.ron
