[package]
name = "drift-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
drift-core = { workspace = true }
drift-data = { workspace = true }
drift-mods = { workspace = true }
drift-economy = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
